--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "@tauri-apps/plugin-sql": "2.0.0-beta.7",
     "konva": "^9.3.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
