--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "konva": "^9.3.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-konva": "^18.2.10"
+    "react-konva": "^18.2.10",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@tauri-apps/cli": ">=2.0.0-beta.0",
