--- a/package.json
+++ b/package.json
@@ -7,28 +7,29 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "format": "pnpm exec prettier . --write"
   },
   "dependencies": {
-    "@tauri-apps/api": ">=2.0.0-beta.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "@tauri-apps/api": "2.0.0-beta.15",
+    "@tauri-apps/plugin-shell": "2.0.0-beta.8",
     "@tauri-apps/plugin-sql": "2.0.0-beta.7",
-    "konva": "^9.3.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "konva": "^9.3.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-konva": "^18.2.10",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
-    "@tauri-apps/cli": ">=2.0.0-beta.0",
-    "@types/node": "^20.14.11",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@tauri-apps/cli": "2.0.0-beta.22",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "prettier": "3.3.3",
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.5.4",
+    "vite": "^5.3.4"
   }
 }
