--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "pnpm exec prettier . --write"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tauri-apps/api": "2.0.0-beta.15",
     "@tauri-apps/plugin-shell": "2.0.0-beta.8",
     "@tauri-apps/plugin-sql": "2.0.0-beta.7",
@@ -28,6 +31,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "prettier": "3.3.3",
+    "react-fps": "^1.0.6",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.4",
     "vite": "^5.3.4"
