--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "2.0.0-beta.22",
+    "@tauri-apps/cli": "2.0.0-rc.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
