--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: |
-          cd src-tauri cargo build --verbose
+          cd src-tauri 
+          cargo build --verbose
     - name: Run tests
       run: |
           cd src-tauri
