--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,11 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      run: |
-          cd src-tauri 
-          cargo build --verbose
     - name: Run tests
       run: |
+          sudo apt install -y libwebkit2gtk-4.1-dev \
+          build-essential \
+          curl \
+          wget \
+          file \
+          libxdo-dev \
+          libssl-dev \
+          libayatana-appindicator3-dev \
+          librsvg2-dev
           cd src-tauri
           cargo test --verbose
