--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@tauri-apps/api": "2.0.0-beta.15",
+    "@tauri-apps/plugin-fs": "2.0.0-rc.0",
     "@tauri-apps/plugin-shell": "2.0.0-beta.8",
     "@tauri-apps/plugin-sql": "2.0.0-beta.7",
     "konva": "^9.3.14",
