--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,9 @@ tauri = { version = "2.0.0-rc.0", features = [] }
 tauri-plugin-shell = "2.0.0-rc.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+bincode = "1.3.3"
+dirs-next = "2.0.0"
+tauri-plugin-fs = "2.0.0-rc.0"
 
 [dependencies.tauri-plugin-sql]
 features = ["sqlite"] # or "postgres", or "mysql"
