--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,11 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 bincode = "1.3.3"
 dirs-next = "2.0.0"
+rust-crypto = "0.2.36"
+rand = "0.8.4"
 tauri-plugin-fs = "2.0.0-rc.0"
+dotenv = "0.15.0"
+hex = "0.4.3"
 
 [dependencies.tauri-plugin-sql]
 features = ["sqlite"] # or "postgres", or "mysql"
