--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Run tests
+    env: 
+      key: ${{ secrets.KEY_BIN_ENCRYPTION }}
       run: |
           sudo apt install -y libwebkit2gtk-4.1-dev \
           build-essential \
