--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,6 +27,10 @@ jobs:
         libssl-dev \
         libayatana-appindicator3-dev \
         librsvg2-dev
+        
+    - name: Create .env file
+      run: |
+        echo "KEY_BIN_ENCRYPTION=${{ secrets.KEY_BIN_ENCRYPTION }}" > .env
 
     - name: Run tests
       env: 
