--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ rand = "0.8.4"
 tauri-plugin-fs = "2.0.0-rc.0"
 dotenv = "0.15.0"
 hex = "0.4.3"
+flate2 = "1.0.31"
 
 [dependencies.tauri-plugin-sql]
 features = ["sqlite"] # or "postgres", or "mysql"
