--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,10 +19,11 @@ bincode = "1.3.3"
 dirs-next = "2.0.0"
 rust-crypto = "0.2.36"
 rand = "0.8.4"
-tauri-plugin-fs = "2.0.0-rc.0"
+tauri-plugin-fs = {version = "2.0.0-rc.0",features = ["watch"] }
 dotenv = "0.15.0"
 hex = "0.4.3"
 flate2 = "1.0.31"
+tauri-plugin-dialog = "2.0.0-rc.2"
 
 [dependencies.tauri-plugin-sql]
 features = ["sqlite"] # or "postgres", or "mysql"
