--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tauri-apps/api": "2.0.0-beta.15",
     "@tauri-apps/plugin-dialog": "2.0.0-rc.0",
     "@tauri-apps/plugin-fs": "2.0.0-rc.0",
+    "@tauri-apps/plugin-log": "2.0.0-rc.0",
     "@tauri-apps/plugin-shell": "2.0.0-beta.8",
     "@tauri-apps/plugin-sql": "2.0.0-beta.7",
     "konva": "^9.3.14",
