--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,9 @@ dotenv = "0.15.0"
 hex = "0.4.3"
 flate2 = "1.0.31"
 tauri-plugin-dialog = "2.0.0-rc.2"
+aes-gcm = "0.10.3"
+log = "0.4.22"
+tauri-plugin-log = "2.0.0-rc.1"
 
 [dependencies.tauri-plugin-sql]
 features = ["sqlite"] # or "postgres", or "mysql"
