--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt install -y libwebkit2gtk-4.1-dev \
+        sudo apt update -y && apt install -y libwebkit2gtk-4.1-dev \
         build-essential \
         curl \
         wget \
