--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 env:
   CARGO_TERM_COLOR: always
@@ -14,27 +14,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: |
-        sudo apt install -y libwebkit2gtk-4.1-dev \
-        build-essential \
-        curl \
-        wget \
-        file \
-        libxdo-dev \
-        libssl-dev \
-        libayatana-appindicator3-dev \
-        librsvg2-dev
+      - name: Install dependencies
+        run: |
+          sudo apt install -y libwebkit2gtk-4.1-dev \
+          build-essential \
+          curl \
+          wget \
+          file \
+          libxdo-dev \
+          libssl-dev \
+          libayatana-appindicator3-dev \
+          librsvg2-dev
 
-
-    - name: Create .env file
-      run: |
-        echo "KEY_BIN_ENCRYPTION=${{ secrets.KEY_BIN_ENCRYPTION }}" > .env
-    - name: Run tests
-      env: 
-        KEY_BIN_ENCRYPTION: ${{ secrets.KEY_BIN_ENCRYPTION }}
-      run: |
-        cd src-tauri
-        cargo test --verbose
+      - name: Create .env file
+        run: |
+          echo "KEY_BIN_ENCRYPTION=${{ secrets.KEY_BIN_ENCRYPTION }}" > .env
+      - name: Run tests
+        env:
+          KEY_BIN_ENCRYPTION: ${{ secrets.KEY_BIN_ENCRYPTION }}
+        run: |
+          cd src-tauri
+          cargo test --verbose
