--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@headlessui/react": "^2.1.10",
+    "@heroicons/react": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.0",
     "@tauri-apps/api": "2.0.0-beta.15",
     "@tauri-apps/plugin-dialog": "2.0.0-rc.0",
