--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@tauri-apps/api": "2.0.0-beta.15",
